--- a/_tu_helper/_Py_script/_draw_graph/03_render/config_render.toml
+++ b/_tu_helper/_Py_script/_draw_graph/03_render/config_render.toml
@@ -3,9 +3,7 @@
 # Параметр open_after_render — открыть SVG в браузере после генерации.
 
 [io]
-input_dirs = [
-  "D:/Entertaiment/Графы/Пример 1"
-]
+input_dirs = ["D:/Entertaiment/Графы/Пример 1"]
 recursive = true
 include_extensions = ["toml"]
 exclude_patterns = []
