--- a/_tu_helper/_Py_script/_draw_graph/02_autolayout/config_autolayout.toml
+++ b/_tu_helper/_Py_script/_draw_graph/02_autolayout/config_autolayout.toml
@@ -55,10 +55,25 @@ materialize = []              # пример: ["size","pos"]
 mode = "fill"                 # "fill" — только пустые поля; "overwrite" — перезаписывать всегда
 [layout]
 # Настройки автолайаута (работают только на этом этапе; рендер берёт готовые координаты/размеры)
+
+# Алгоритм раскладки:
+# "layered" — слоистая (минимизация пересечений рёбер, удобно для потоков)
+# "grid"    — сетка (компактно, но без упора на уменьшение пересечений)
+# "off"     — не раскладывать (оставить ваши координаты)
+
 mode = "layered"              # layered|grid|off
+
+# Направление:
+# "LR" — слева направо, "RL" — справа налево,
+# "TB" — сверху вниз, "BT" — снизу вверх
+
 direction = "LR"              # LR|RL|TB|BT
+
+# Зазоры (помогают избежать наложений)
 node_gap = 0.10               # горизонтальный зазор между узлами (в относительных единицах)
+
 layer_gap = 0.18              # вертикальный зазор между слоями (в относительных единицах)
+
 respect_fixed_blocks = true   # не двигать блоки, у которых зафиксированы координаты
 
 [defaults]
